--- a/styles/home.css
+++ b/styles/home.css
@@ -18,25 +18,36 @@ section {
     
 header {
     width: 100%;
+    display: flex;
+    align-items: end;
+    gap: 1rem;
+}
+
+header > p {
+    font-size: 2rem;
+    font-weight: 600;
+    color: var(--cor-primary);
 }
 
 .text-input-container {
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     width: 100%;
     height: 100%;
-    }
+    padding-bottom: 2.3rem;
+    margin-top: 5rem;
+}
     
-    textarea {
+textarea {
     width: 100%;
     max-width: 680px;
     height: 400px;
     padding: 1rem;
     color: var(--cor-primary);
     background-color: var(--cor-bg-2);
-    border-radius: 15px;
+    border-radius: 1.25rem;
     border: none;
     font-size: 1.5rem;
     font-weight: 400;
@@ -57,10 +68,46 @@ textarea:focus {
     height: 80px;
 }
 
-aside {
+.buttons-content {
+    display: flex;
+    gap: 1.5rem;
+}
+
+button {
     width: 100%;
-    max-width: 464px;
-    border-radius: 15px;
+    padding: 1.5rem;
+    border-radius: 1.25rem;
+    font-size: 1rem;
+    font-weight: 400;
+    border: none;
+    cursor: pointer;
+    transition: transform 0.3s ease;
+}
+
+button:active {
+    transform: scale(1.1)
+}
+
+.btn-primary {
+    background-color: var(--cor-primary); 
+    color: var(--cor-text-secondary);
+}
+
+
+.btn-secondary {
+   background-color: var(--cor-secondary);
+   color: var(--cor-primary);
+   border: 2px solid var(--cor-primary);
+}
+
+aside {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 100%;
+    max-width: 400px;
     padding: 2rem;
+    border-radius: 1.5rem;
     background-color: var(--cor-bg-2);
+    box-shadow: 10px 10px 15px -10px rgba(0,0,0,0.3);
 }
