--- a/styles/home.css
+++ b/styles/home.css
@@ -68,6 +68,26 @@ textarea:focus {
     outline-color: var(--cor-primary);
 }
 
+.alert {
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+    margin: 1rem 0;
+    font-size: 0.875rem;
+    opacity: 0.5;
+}
+
+.alert-icon {
+    text-align: center;
+    color: var(--cor-text-secondary);
+    background-color: var(--cor-text-primary);
+    width: 25px;
+    border-radius: 50%;
+    padding: 3px;
+    font-size: 1rem;
+    font-weight: 600;
+}
+
 .buttons-container {
     width: 100%;
     max-width: 680px;
