--- a/styles/home.css
+++ b/styles/home.css
@@ -6,7 +6,6 @@ main {
     padding: 2rem;
 }
 
-
 section {
     display: flex;
     flex-direction: column;
@@ -101,11 +100,14 @@ button:active {
     transform: scale(1.1)
 }
 
+button:hover {
+    opacity: 0.9;
+ }
+
 .btn-primary {
     background-color: var(--cor-primary); 
     color: var(--cor-text-secondary);
 }
-
 
 .btn-secondary {
    background-color: var(--cor-secondary);
@@ -152,3 +154,79 @@ aside {
     height: 100%;
     display: none;
 }
+
+@media (max-width: 668px){
+    main {
+        flex-wrap: wrap;
+        padding: 1rem;
+        padding-bottom: 2rem;
+    }
+
+    .text-input-container {
+        padding-bottom: 0;
+        margin-top: 3.5rem;
+    }
+
+    .text-input-content {
+        margin-bottom: 1rem;
+    }
+
+    textarea {
+        min-height: 200px;
+        padding: 1rem;
+        border-radius: 1rem;
+        font-size: 1rem;
+    }
+
+    textarea::placeholder {
+        color: var(--cor-primary); 
+        font-size: 1.25rem;
+    }
+
+    .alert {
+        margin: 0.6rem 0;
+        font-size: 0.7rem;
+    }
+    
+    .alert-icon {
+        width: 17px;
+        padding: 2px;
+        font-size: 0.7rem;
+    }
+
+    button {
+        padding: 0.75rem;
+        border-radius: 1rem;
+        font-size:0.875rem;
+    }
+
+    .buttons-content {
+        gap: 0.5rem;
+    }
+
+    aside {
+        padding: 1rem;
+        border-radius: 1rem;
+        max-width: none;
+    }
+
+    .text-output-container {
+        align-items: center;
+    }
+
+    .image-aside {
+        padding: 0;
+    }
+
+    .image-aside > h2 {
+        font-size: 1rem;
+    }
+
+    .image-aside > p {
+        font-size: 0.75rem;
+    }
+
+    .image-aside > img {
+        display: none;
+    }
+} 
