--- a/styles/home.css
+++ b/styles/home.css
@@ -1,4 +1,6 @@
 main {
+    max-width: 1400px;
+    margin: auto;
     display: flex;
     justify-content: space-evenly;
     gap: 1rem;
@@ -33,8 +35,8 @@ header {
     height: 100%;
     max-height: 350px;
 }
-    
-textarea {
+
+.text-area, .message{
     width: 100%;
     height: 100%;
     padding: 1rem;
@@ -55,6 +57,11 @@ textarea:focus {
     outline-color: var(--cor-primary);
 }
 
+.buttons-container {
+    width: 100%;
+    max-width: 680px;
+}
+
 .alert {
     display: flex;
     align-items: center;
@@ -73,11 +80,6 @@ textarea:focus {
     padding: 3px;
     font-size: 1rem;
     font-weight: 600;
-}
-
-.buttons-container {
-    width: 100%;
-    max-width: 680px;
 }
 
 .buttons-content {
@@ -129,30 +131,39 @@ aside {
 
 .text-output-container {
     display: flex;
-    align-items: end;
-    height: 80%;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 5rem;
+    height: 100%;
 }
 
 .image-aside {
     padding: 1rem;
 }
 
-.image-aside > h2 {
+.content > h2 {
     text-align: center;
     margin-top: 1rem;
 }
 
-.image-aside > p {
+.content > p {
     text-align: center;
     margin-top: 1rem;
     font-size: 1rem;
     opacity: 0.7;
 }
 
-.text-output-content {
-    width: 100%;
-    height: 100%;
+.hidden{
     display: none;
+}
+
+footer {
+    display:flex;
+    justify-content: center;
+    background: var(--cor-primary);
+    color: #ffffff;
+    text-align: center;
+    padding: 2rem 1rem;
 }
 
 @media (max-width: 375px) {
@@ -177,8 +188,7 @@ aside {
         margin-bottom: 1rem;
     }
 
-    textarea {
-        min-height: 200px;
+    .text-area, .message {
         padding: 1rem;
         border-radius: 1rem;
         font-size: 1rem;
@@ -216,23 +226,21 @@ aside {
         max-width: none;
     }
 
+    .image {
+        display: none;
+    }
+
     .text-output-container {
         align-items: center;
+        justify-content: center;
+        gap: 0;
     }
 
-    .image-aside {
-        padding: 0;
-    }
-
-    .image-aside > h2 {
+    .content > h2 {
         font-size: 1rem;
     }
 
-    .image-aside > p {
+    .content > p {
         font-size: 0.75rem;
-    }
-
-    .image-aside > img {
-        display: none;
     }
 } 
